force-app/main/default/objects/BasiqEntityAccount__c/BasiqEntityAccount__c.object-meta.xml
<CustomObject>
    <label>Basiq Entity Account (Obsolete)</label>
    <nameField>
        <label>Basiq Entity Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Basiq Entity Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>