force-app/main/default/objects/BasiqEntityAccount__c/fields/AccounHolder__c.field-meta.xml
<CustomField>
    <fullName>AccounHolder__c</fullName>
    <label>Account Holder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>