force-app/main/default/objects/BasiqEntityAccount__c/fields/BasiqEnitityConnection__c.field-meta.xml
<CustomField>
    <fullName>BasiqEnitityConnection__c</fullName>
    <label>Basiq Enitity Connection</label>
    <referenceTo>BasiqEnitityConnection__c</referenceTo>
    <relationshipName>BasiqEntityAccounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>